fix: Adjust layout and spacing in API playground details page

--- a/src/atomicui/pages/ApiPlaygroundDetailsPage/styles.scss
+++ b/src/atomicui/pages/ApiPlaygroundDetailsPage/styles.scss
@@ -24,11 +24,11 @@
 
 	.map-container {
 		position: relative;
-		height: max(614px, calc(100vh - 334px));
+		height: max(614px, calc(100vh - 250px));
 		transition: all 0.3s ease;
 
 		.snippets-content-container {
-			height: calc(100vh - 334px - 1rem - 120px);
+			height: calc(100vh - 250px - 1rem - 120px);
 		}
 
 		&.fullscreen {
@@ -54,7 +54,7 @@
 		flex-direction: column;
 		align-items: flex-start;
 		justify-content: space-between;
-		gap: 2rem;
+		gap: 1rem;
 		margin-top: 50px;
 	}
 
